--- a/gedi/pubspec.yaml
+++ b/gedi/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.2
   image_picker: ^0.8.4+5
+  firebase_core: ^1.12.0
+  cloud_firestore: ^3.1.7
 
 dev_dependencies:
   flutter_test:
