--- a/gedi/android/app/src/main/AndroidManifest.xml
+++ b/gedi/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.gedi">
+    package="com.dadaren.gedi">
    <application
         android:label="GeDi"
         android:name="${applicationName}"
