--- a/gedi/pubspec.yaml
+++ b/gedi/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   image_picker: ^0.8.4+5
   firebase_core: ^1.12.0
   cloud_firestore: ^3.1.7
+  photo_view: ^0.13.0
 
 dev_dependencies:
   flutter_test:
