--- a/gedi/pubspec.yaml
+++ b/gedi/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^1.12.0
   cloud_firestore: ^3.1.7
   photo_view: ^0.13.0
+  google_ml_kit_for_korean: ^0.0.10
 
 dev_dependencies:
   flutter_test:
