--- a/gedi/pubspec.yaml
+++ b/gedi/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   cloud_firestore: ^3.1.7
   photo_view: ^0.13.0
   google_ml_kit_for_korean: ^0.0.10
+  table_calendar: ^3.0.3
+  intl: ^0.17.0
+  sliding_up_panel: ^2.0.0+1
 
 dev_dependencies:
   flutter_test:
