--- a/gedi/ios/Runner/Info.plist
+++ b/gedi/ios/Runner/Info.plist
@@ -49,5 +49,32 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.dadaren.gedi</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.335506891082-vohpsn8k9m0sckui4a5k5csnuvhp67s2</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.335506891082-vohpsn8k9m0sckui4a5k5csnuvhp67s2</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
