--- a/gedi/android/app/src/main/AndroidManifest.xml
+++ b/gedi/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dadaren.gedi">
-   <application
+    <application
         android:label="GeDi"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
@@ -28,7 +28,9 @@
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
-            android:name="flutterEmbedding"
-            android:value="2" />
+                    android:name="flutterEmbedding"
+                    android:value="2"
+            />
+
     </application>
 </manifest>
